fixed spinner bug

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <p>An example of <code>&lt;now-playing&gt;</code>:</p>
 
-    <now-playing jukebox-id="-K0A9UUOrz-CL7-GRtcc"></now-playing>
+    <now-playing current="Oasis-hello there"></now-playing>
 
   </body>
 </html>
