--- a/now-playing.html
+++ b/now-playing.html
@@ -48,7 +48,7 @@ Example:
 
     <paper-material>
       <paper-icon-button icon="av:volume-up" alt="Playing..."></paper-icon-button>
-      <paper-spinner hidden="[[current.title]]" alt="Loading..." active></paper-spinner>
+      <paper-spinner hidden="[[current]]" alt="Loading..." active></paper-spinner>
       <span>[[current]]</span>
     </paper-material>
 
